internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-rewrite-url-regex.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /$env:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /$env
                  name: rewrite-route-with-special-characters
                  route:
                    cluster: rewrite-route
                    regexRewrite:
                      pattern:
                        regex: ^/\$env\/*
                      substitution: /
                    upgradeConfigs:
                    - upgradeType: websocket
            /origin:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      pathSeparatedPrefix: /origin
                    name: rewrite-route
                    route:
                      cluster: rewrite-route
                      regexRewrite:
                        pattern:
                          regex: ^/service/([^/]+)(/.*)$
                        substitution: \2/instance/\1
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      pathSeparatedPrefix: /origin
                    name: rewrite-route-timeout
                    route:
                      cluster: rewrite-route
                      idleTimeout: 3600s
                      regexRewrite:
                        pattern:
                          regex: ^/service/([^/]+)(/.*)$
                        substitution: \2/instance/\1
                      timeout: 5s
                      upgradeConfigs:
                      - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /$env/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /$env
                      name: rewrite-route-with-special-characters
                      route:
                        cluster: rewrite-route
                        regexRewrite:
                          pattern:
                            regex: ^/\$env\/*
                          substitution: /
                        upgradeConfigs:
                        - upgradeType: websocket
                /origin/:
                  action:
                    name: route_list
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                      routes:
                      - match:
                          pathSeparatedPrefix: /origin
                        name: rewrite-route
                        route:
                          cluster: rewrite-route
                          regexRewrite:
                            pattern:
                              regex: ^/service/([^/]+)(/.*)$
                            substitution: \2/instance/\1
                          upgradeConfigs:
                          - upgradeType: websocket
                      - match:
                          pathSeparatedPrefix: /origin
                        name: rewrite-route-timeout
                        route:
                          cluster: rewrite-route
                          idleTimeout: 3600s
                          regexRewrite:
                            pattern:
                              regex: ^/service/([^/]+)(/.*)$
                            substitution: \2/instance/\1
                          timeout: 5s
                          upgradeConfigs:
                          - upgradeType: websocket
    name: first-listener/gateway_envoyproxy_io
